--- a/index.html
+++ b/index.html
@@ -9,13 +9,24 @@
 <body>
     <div class="card">
         <h4>Task Tracker Shot</h4>
-        <h4> <img src="./images/avatarMES.jpg" alt="avatarMS" class="avatarMes"> Creative</h4>
-        <h4> <img src="./images/avatarCL.jpg" alt="avatarMS" class="avatarCL"> Till February 10</h4>
-        <div class="dribblebox">
-            <h4 class="dribble">Dribble</h4>
-        </div>
+        <ul>
+            <li><img src="./images/avatarMES.jpg" alt="avatarMS" class="avatarMes"> Creative</li>
+            <li><img src="./images/avatarCL.jpg" alt="avatarMS" class="avatarCL"> Till February 10</li>
+        </ul>
+
+        <button type="button" class="button">Dribble</button>
+
         <hr class="line" />
 
+        <div class="footer">
+            <div class="avatars">
+                <img src="./images/avatar1.png" alt="avatarMS" class="">
+                <img src="./images/avatar2.png" alt="avatarMS" class="">
+                <img src="./images/avatar3.png" alt="avatarMS" class="">
+            </div>
 
+            <div class="time">6:42:13</div>
+            <div class="play">></div>
+        </div>
     </div>
 </body>
